[project]
name = "amq-jolokia-server"
version = "0.0.1"
description = "ActiveMQ Artemis Broker MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.22.0",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
]
